myproject_src = files([
	'10.cpp',
	'10.h'
])

executable(
	'myproject', # название исполняемого файла
	include_directories: src, # где ищутся заголовочные файлы
	sources: myproject_src, # список исходный файлов
	dependencies: [], # зависимости проекта (если имеются)
	install: true # устанавливать ли файл
)