myproject_src = files([
	'5.cpp',
	'account.h',
	'mergeSort.h',
	'nIterator.h'
])

executable(
	'myproject', # название исполняемого файла
	include_directories: src, # где ищутся заголовочные файлы
	sources: myproject_src, # список исходный файлов
	dependencies: [], # зависимости проекта (если имеются)
	install: true # устанавливать ли файл
)
