myproject_src = files([
	'main.cpp',
	'ln80c_buffer.h',
	'stat_buffer.h'
])

executable(
	'myproject', # название исполняемого файла
	include_directories: src, # где ищутся заголовочные файлы
	sources: myproject_src, # список исходный файлов
	dependencies: [], # зависимости проекта (если имеются)
	install: true # устанавливать ли файл
)
