myproject_src = files([
	'Vector.h',
	'Vector.hpp',
	'testStreams.cpp'
])
executable(
	'myproject', # название исполняемого файла
	include_directories: src, # где ищутся заголовочные файлы
	sources: myproject_src, # список исходный файлов
	dependencies: [], # зависимости проекта (если имеются)
	install: true # устанавливать ли файл
)
