myproject_src = files([
	'main.cpp',
	'Vector.h',
	'Vector.hpp'
])
executable(
	'2', # название исполняемого файла
	include_directories: src, # где ищутся заголовочные файлы
	sources: myproject_src, # список исходный файлов
	dependencies: [], # зависимости проекта (если имеются)
	install: true # устанавливать ли файл
)
