myproject_src = files([
	'account.h',
	'mergeSort.h',
	'nIterator.h'
])

executable(
	'5', # название исполняемого файла
	include_directories: src, # где ищутся заголовочные файлы
	sources: myproject_src, # список исходный файлов
	dependencies: [], # зависимости проекта (если имеются)
	install: false # устанавливать ли файл
)
